feat: add private export jobs
